unpackaged/main/default/objects/sked_Email_Setting__c/sked_Email_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Skedulo Email Setting</label>
</CustomObject>