unpackaged/main/default/objects/sked_Email_Setting__c/fields/sked_BHQ_APS_Staff_SchedulingTimekeeping__c.field-meta.xml
<CustomField>
    <fullName>sked_BHQ_APS_Staff_SchedulingTimekeeping__c</fullName>
    <label>BHQ - APS Staff Scheduling/Timekeeping</label>
    <type>Email</type>
</CustomField>