unpackaged/main/default/objects/sked_Email_Setting__c/fields/sked_BHQ_Collections_Planning_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>sked_BHQ_Collections_Planning_Scheduling__c</fullName>
    <label>BHQ Collections Planning &amp; Scheduling</label>
    <type>Email</type>
</CustomField>