unpackaged/main/default/objects/sked_Email_Setting__c/fields/sked_Opp_DOC_Sync_Error_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Opp_DOC_Sync_Error_Email__c</fullName>
    <label>Opp DOC Sync Error Email</label>
    <type>Email</type>
</CustomField>